<resources>
    <string name="app_name">Place Pixelhobby</string>
    <string name="count_colors">Count Colors</string>
    <string name="images">Images</string>
    <string name="history">History</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="all_images">All Images</string>
    <string name="favorite_images">Favorites</string>
    <string name="no_favorites">No favorites available</string>
    <plurals name="x_images_selected">
        <item quantity="one">%1$d image selected</item>
        <item quantity="other">%1$d images selected</item>
    </plurals>
    <string name="next">Next</string>
    <string name="selected">Selected</string>
    <string name="finish">Finish</string>
    <plurals name="x_of_y_colors">
        <item quantity="one">%1$d of %2$d color</item>
        <item quantity="other">%1$d of %2$d colors</item>
    </plurals>
    <string name="color">Color</string>
    <string name="info">Info</string>
    <string name="white">White</string>
    <string name="light_gray">Light Gray</string>
    <string name="gray">Gray</string>
    <string name="black">Black</string>
    <string name="pink">Pink</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="brown">Brown</string>
    <string name="yellow">Yellow</string>
    <string name="light_green">Light Green</string>
    <string name="green">Green</string>
    <string name="aqua_blue">Aqua-Blue</string>
    <string name="green_blue">Green-Blue</string>
    <string name="blue">Blue</string>
    <string name="violet">Violet</string>
    <string name="purple">Purple</string>
    <string name="color_subtitle" translatable="false">%1$s%n%2$d</string>
    <string name="color_information">Color Information</string>
    <string name="cut">Cut</string>
    <string name="image_no_d_x_y">Image no. %1$d (%2$d|%3$d)</string>
    <string name="name">Name</string>
    <string name="pixelhobby_code">Pixelhobby-Code</string>
    <string name="pixelhobby_rgb">Pixelhobby-RGB</string>
    <string name="place_rgb">Place-RGB</string>
    <string name="cut_information">Cut Information</string>
    <plurals name="x_full_plates_plus">
        <item quantity="one">%1$d full plate +</item>
        <item quantity="other">%1$d full plates +</item>
    </plurals>
    <string name="x_plus_y" translatable="false">%1$s + %2$s</string>
    <plurals name="x_pixels">
        <item quantity="one">%1$d Pixel</item>
        <item quantity="other">%1$d Pixels</item>
    </plurals>
    <plurals name="x_squares">
        <item quantity="one">%1$d Colorsquare</item>
        <item quantity="other">%1$d Colorsquares</item>
    </plurals>
    <string name="final_clean">Cleaned</string>
    <string name="atlas">Atlas</string>
    <string name="original">Original</string>
    <string name="image">Image</string>
    <string name="sources">Sources</string>
    <string name="new_line" translatable="false">%1$s%n%2$s</string>
    <string name="credit_star" translatable="false">Icons made by https://www.flaticon.com/authors/smashicons from https://www.flaticon.com</string>
    <string name="credit_image" translatable="false">Icons made by https://www.flaticon.com/authors/smashicons from https://www.flaticon.com</string>
    <string name="credit_clock" translatable="false">Icons made by https://www.flaticon.com/authors/freepik from https://www.flaticon.com</string>
    <string name="credit_counter" translatable="false">Icons made by https://www.flaticon.com/authors/freepik from https://www.flaticon.com</string>
    <string name="credit_check" translatable="false">Icons made by https://www.flaticon.com/authors/pixel-perfect from https://www.flaticon.com</string>
    <string name="credit_cut" translatable="false">Icons made by https://www.flaticon.com/authors/freepik from https://www.flaticon.com</string>
    <string name="credit_info" translatable="false">Icons made by https://www.flaticon.com/authors/freepik from https://www.flaticon.com</string>
    <string name="credit_compass" translatable="false">Icons made by https://www.flaticon.com/authors/google from https://www.flaticon.com</string>
    <string name="credit_book" translatable="false">Icons made by https://www.flaticon.com/authors/freepik from https://www.flaticon.com</string>
    <string name="credits" translatable="false">All Place images are taken from the Subreddits https://www.reddit.com/r/place and https://www.reddit.com/r/thefinalclean. The data for the history is taken from https://www.reddit.com/r/redditdata/comments/6640ru/place_datasets_april_fools_2017/. The Place Atlas is courtesy of Roland Rytz https://draemm.li/various/place-atlas/about.html. The image of the heatmap of Place in the drawer is from https://www.reddit.com/user/lotsalote/ and can be found at https://imgur.com/a/PCiQu. Oh and this App is by me, Josua Frank https://www.reddit.com/user/Sharknoon</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="shortcut">Shortcut</string>
    <string name="image_d">Image %1$d</string>
    <string name="grid">Grid</string>
</resources>
