<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_images"
        android:icon="@drawable/ic_images"
        android:title="@string/images" />

    <item
        android:id="@+id/navigation_place"
        android:icon="@drawable/ic_image"
        android:title="@string/image" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_clock"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_atlas"
        android:icon="@drawable/ic_compass"
        android:title="@string/atlas" />

    <item
        android:id="@+id/navigation_counter"
        android:icon="@drawable/ic_counter"
        android:title="@string/count_colors" />

</menu>