<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PlaceFragment">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/photo_view_fragment_place_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_layout_fragment_place_options"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/linear_layout_fragment_place_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group_fragment_place"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingStart="@dimen/layout_distance_small"
        android:paddingTop="@dimen/layout_distance_small"
        android:paddingEnd="@dimen/layout_distance_small">

        <Switch
            android:id="@+id/switch_fragment_place_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid"
            android:textColor="@color/colorWhite"
            android:thumbTint="@color/colorWhite" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_fragment_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_button_fragment_place_original"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textOff="@string/original"
            android:textOn="@string/original"
            android:theme="@style/ToggleButton" />

        <ToggleButton
            android:id="@+id/toggle_button_fragment_place_clean"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textOff="@string/final_clean"
            android:textOn="@string/final_clean"
            android:theme="@style/ToggleButton" />

    </RadioGroup>

</RelativeLayout>